src/css/covers.css
body {
  margin: 0;
}

*,
*::before,
*::after {
  box-sizing: border-box;
}

.visually-hidden {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  border: 0;
  padding: 0;
  white-space: nowrap;
  clip-path: inset(100%);
  clip: rect(0 0 0 0);
  overflow: hidden;
}
.content {
  position: relative;
  z-index: 1;
  background: url('../img/covers/elements_vectors_.png') no-repeat center;
  background-size: contain;
}

.marquee {
  position: absolute;
  right: -900px;
  left: 0;
  overflow: hidden;
  display: flex;
  flex-direction: column;
  gap: 66px;
}

.marquee {
  width: 100%;
  overflow: hidden;
  position: relative;
  display: flex;
  align-items: center;
  justify-content: flex-start;
}

.marquee__inner {
  display: flex;
  transform: rotate(16deg);
  flex-wrap: nowrap;
  white-space: nowrap;
}

.marquee__line {
  flex-shrink: 0;
  margin-right: 10px;
  object-fit: cover;
  animation-name: marqueeLine;
  animation-duration: 15s;
  animation-timing-function: ease-in-out;
  animation-iteration-count: infinite;
}

.marquee__line {
  width: 544px;
  height: 314px;
  object-fit: cover;
  margin-right: 20px;
}

@media (max-width: 768px) {
  .marquee__line {
    width: 544px;
    height: 314px;
  }
}

@media (max-width: 375px) {
  .marquee__line {
    width: 282px;
    height: 162px;
    margin-right: 10px;
  }
}

@keyframes marqueeLine {
  from {
    transform: translateX(-20%);
  }
  to {
    transform: translateX(-180%);
  }
}

.covers {
  display: flex;
  align-items: center;
  justify-content: center;
  z-index: 0;
}

.content {
  position: relative;
  z-index: 1;
  background: url('../img/covers/elements_vectors_.png') no-repeat center;
  background-size: cover;
  /* height: 150vh; */
  height: auto;
}

.marquee {
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  overflow: hidden;
  display: flex;
  flex-direction: column;
  gap: 66px;
  width: 100%;
  z-index: 2;
}

.marquee__inner {
  display: flex;
  transform: rotate(16deg);
  flex-wrap: nowrap;
  white-space: nowrap;
  animation-play-state: paused;
  z-index: 3;

  align-items: center;
  justify-content: flex-start;
  margin-top: -20px;
}

.marquee {
  width: 100%;
  overflow: hidden;
  position: relative;
}

@media (min-width: 1440px) {
  .marquee {
    height: 960px;
  }
}

@media (max-width: 768px) {
  .marquee {
    height: 960px;
  }
}

@media (max-width: 375px) {
  .marquee {
    height: 508px;
  }
}

